--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test</title>
+    <title>Home ⋅ Hejsil</title>
+    <link rel="stylesheet" href="https://unpkg.com/marx-css/css/marx.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">Home</a>
+            </li>
+            <li>
+                <a href="./cv.html">CV</a>
+            </li>
+            <li>
+                <a href="./anilist.html">Anilist</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Komari Spaghetti</h1>
+        <p>Hello, I'm just some danish dude who works on software some time to time.</p>
+        <h2>Likes</h2>
+        <ul>
+            <li>Open Source</li>
+            <li>
+                <a href="https://ziglang.org/">Zig</a>
+            </li>
+            <li>Linux</li>
+            <li>Anime</li>
+            <li>Gaming</li>
+        </ul>
+        <h2>Dislikes</h2>
+        <ul>
+            <li>Overcomplicated solutions
+                <ul>
+                    <li>Docker</li>
+                    <li>Any web framework</li>
+                    <li>The use of dynamic linking</li>
+                </ul>
+            </li>
+            <li>Pineapples</li>
+        </ul>
+    </main>
 </body>
 </html>
