Add script for downloading list and putting it in a table

--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
         <table>
             <tr>
                 <td>Time</td>
-                <td>10/2020 - ???</td>
+                <td>10/2020 - Now</td>
             </tr>
             <tr>
                 <td>Company</td>
