anilist: Give status meaningful names

--- a/anilist.html
+++ b/anilist.html
@@ -22,15 +22,7 @@
     </nav>
     <main>
         <h1>Anilist</h1>
-        <table id="list">
-            <tr id="list-header">
-                <th>Anime</th>
-                <th>Status</th>
-                <th>Episodes Watched</th>
-                <th>Watch Count</th>
-                <th>Last Updated</th>
-            </tr>
-        </table>
+        <table id="list"></table>
     </main>
 </body>
 </html>
