--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <h1>Komari Spaghetti</h1>
-        <p>Hello, I'm just some danish dude who works on software some time to time.</p>
+        <p>Hello, I'm just some danish dude who works on software from time to time.</p>
         <h2>Likes</h2>
         <ul>
             <li>Open Source</li>
