Remove text on main page (for now)

--- a/index.html
+++ b/index.html
@@ -20,29 +20,7 @@
         </ul>
     </nav>
     <main>
-        <h1>Komari Spaghetti</h1>
-        <p>Hello, I'm just some danish dude who works on software from time to time.</p>
-        <h2>Likes</h2>
-        <ul>
-            <li>Open Source</li>
-            <li>
-                <a href="https://ziglang.org/">Zig</a>
-            </li>
-            <li>Linux</li>
-            <li>Anime</li>
-            <li>Gaming</li>
-        </ul>
-        <h2>Dislikes</h2>
-        <ul>
-            <li>Overcomplicated solutions
-                <ul>
-                    <li>Docker</li>
-                    <li>Any web framework</li>
-                    <li>The use of dynamic linking</li>
-                </ul>
-            </li>
-            <li>Pineapples</li>
-        </ul>
+        <h1>There is nothing here</h1>
     </main>
 </body>
 </html>
