--- a/cv.html
+++ b/cv.html
@@ -24,17 +24,29 @@
         <h2>Video Processing and Backend Development</h2>
         <table>
             <tr>
-                <td>Time</td>
-                <td>10/2020 - Now</td>
+                <th>Time:</th>
+                <td>10/2020 - ??/????</td>
             </tr>
             <tr>
-                <td>Company</td>
+                <th>Company:</th>
                 <td>
                     <a href="https://www.aivero.com/">Aivero</a>
                 </td>
             </tr>
         </table>
         <h2>Programming Language and Compiler Design</h2>
+        <table>
+            <tr>
+                <th>Time:</th>
+                <td>05/2019 - 05/2020</td>
+            </tr>
+            <tr>
+                <th>Company:</th>
+                <td>
+                    <a href="https://connectfree.co.jp/">connectFree</a>
+                </td>
+            </tr>
+        </table>
         <ul>
             <li>Primary developer and designer of the <a href="https://zen-lang.org/">Zen</a>
             programming language
@@ -43,19 +55,19 @@
             <li>Worked with and debugged the LLVM library</li>
             <li>Primarly written in C++</li>
         </ul>
+        <h2>Linux Systems and Embedded</h2>
         <table>
             <tr>
-                <td>Time</td>
-                <td>05/2019 - 05/2020</td>
+                <th>Time:</th>
+                <td>09/2017 - 03/2019</td>
             </tr>
             <tr>
-                <td>Company</td>
+                <th>Company:</th>
                 <td>
-                    <a href="https://connectfree.co.jp/">connectFree</a>
+                    <a href="http://www.liab.dk/">LIAB</a>
                 </td>
             </tr>
         </table>
-        <h2>Linux Systems and Embedded</h2>
         <ul>
             <li>Worked with embedded units for TDC's central alarm system
                 <ul>
@@ -64,22 +76,10 @@
             </li>
             <li>Also worked on an embedded web server use for configuring a ventilation system
                 <ul>
-                    <li>Involved working with C, Java, Javascript and Html</li>
+                    <li>Involved working with C, Java, Javascript and HTML</li>
                 </ul>
             </li>
         </ul>
-        <table>
-            <tr>
-                <td>Time</td>
-                <td>09/2017 - 03/2019</td>
-            </tr>
-            <tr>
-                <td>Company</td>
-                <td>
-                    <a href="http://www.liab.dk/">LIAB</a>
-                </td>
-            </tr>
-        </table>
     </main>
 </body>
 </html>
