anilist: Add Anime by Type chart

--- a/anilist.html
+++ b/anilist.html
@@ -24,7 +24,8 @@
     <main>
         <h1>Anilist</h1>
         <section id="stats">
-            <canvas id="byYearChart"></canvas>
+            <canvas id="byReleaseYearChart"></canvas>
+            <canvas id="byTypeChart"></canvas>
         </section>
         <table id="animeList"></table>
     </main>
